# mstardict

./: AUTHORS  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  mstardict.desktop.in.in
debian/: changelog  control  rules
po/: LINGUAS  POTFILES.in  ca.po  cs.po  de.po  fi.po  ru.po  sk.po  zh_CN.po
src/: Makefile.am  conf.cpp  conf.hpp  dictmngr.cpp  dictmngr.hpp  libwrapper.cpp  libwrapper.hpp  mstardict.cpp  mstardict.hpp  prefsdlg.cpp  prefsdlg.hpp  transwin.cpp  transwin.hpp  tts.cpp  tts.hpp
src/lib/: Makefile.am
stardict-plugins/: Makefile.am
stardict-plugins/stardict-html-parsedata-plugin/: Makefile.am  stardict_html_parsedata.cpp
stardict-plugins/stardict-powerword-parsedata-plugin/: Makefile.am
stardict-plugins/stardict-wiki-parsedata-plugin/: Makefile.am
stardict-plugins/stardict-xdxf-parsedata-plugin/: Makefile.am
